# AnemoneerEngine

./: .clang-format  .gitignore  CMakeLists.txt  Others.md  README.md  build.bat  code_generator.bat  generator.bat  shader_compiler.bat  vkt.sln
code_generator/: code_generator.bat  code_generator.cpp  generated_config_struct_enum.h
common/: asset.cpp  common.h  encode.cpp  log.cpp  manager.cpp  math.cpp  object.h  template.h  template_define.h  timer.cpp
data/: config.ini  config.xml  log180121012620.txt  log1801211445.txt  log1801211521.txt  log1801211526.txt  log1801211529.txt  log1801211834.txt  log1801211837.txt  log1801212203.txt  log1801212204.txt  log1801220942.txt  log1801240012.txt  log1801240014.txt  log1801240018.txt  log1801240023.txt  log1801240026.txt  log1801240033.txt  log1805202028.txt  log1805202122.txt  log1805210112.txt  log1805230203.txt  log1805271500.txt  log1805271517.txt  log1805271520.txt  log1805271521.txt  log1805271523.txt  log1805271526.txt  log1805271530.txt  log1805271537.txt  log1805301446.txt  log1805301459.txt  log1805301500.txt  log1805301653.txt  log1805301701.txt  log1805301703.txt  log1805302348.txt  log1806081155.txt  log1806082225.txt  log1806202254.txt  (+2 more)
data/models/: animation.blend  animation.blend1  animation.gltf  ball.blend  ball.blend1  ball.glb  ball.gltf  ball.mtl  box.blend  box.glb  box.gltf  box.mtl  chalet.mtl  cube.blend  cube.gltf  plane.blend  plane.blend1  plane.glb  plane.gltf  plane.mtl  sphere.blend  sphere.gltf  sphere2.gltf  table.lwo  table.mtl  tri.blend  tri.glb  tri.gltf  tri.mtl
data/shaders/: b2d.geom  base.frag  base.geom  base.tesc  base.tese  base.vert  basef.spv  baseg.spv  basem.frag  basetc.spv  basete.spv  basev.frag  basev.spv  billboard.frag  billboard.geom  billboardQuad.geom  billboardTria.geom  billboardf.spv  billboardg.spv  billboardtriag.spv  bloom.frag  compile.bat  cube.frag  cube.geom  cubef.spv  cubeg.spv  cubemap.frag  cubemap.geom  cubemapf.spv  cubemapg.spv  cubemapreflect.frag  frag.spv  geom.spv  grayscale.frag  grayscalef.spv  head.glsl  header.comp  header.frag  header.geom  header.glsl  (+56 more)
data/xml/: config.xml  game_components.xml  game_objects.xml  game_scenes.xml
data/xml - Copy/: config.xml  game_components.xml  game_objects.xml  game_scenes.xml
doc/: Others.md
gpu/: gpu.cpp  gpu.h  gpu_objects.cpp  gpu_objects.h  graphics.cpp  graphics.h  test_main.cpp  ui.cpp  ui.h  vulkan.cpp  vulkan.h  vulkan_objects.cpp  vulkan_objects.h
output/data/: config - Copy.xml  config.xml  config2.xml  shader_compile.bat
output/data/models/: box.gltf  sphere.blend1
output/data/shaders/: base.tese  base.vert  cubemap.frag  headerOut.vert  outline.geom  postprocessing.geom  skeleton.vert  texturem.frag  texturev.frag
shader/: base.tesc  header.tesc  headerIn.vert  particle.comp  pbr.frag  pbr.geom  postprocessing.frag  shader_compiler.bat  toon.frag
src/: animation.cpp  animation.h  asset.cpp  asset.h  axis.cpp  axis.h  camera.cpp  camera.h  command.cpp  command.h  component.cpp  component.h  cubemap.cpp  cubemap.h  encode.cpp  encode.h  engine.cpp  engine.h  game_asset.cpp  game_asset.h  game_encode.cpp  game_encode.h  global.cpp  global.h  graphics.cpp  graphics.h  grid.cpp  grid.h  header.h  inputcontrol.cpp  inputcontrol.h  light.cpp  light.h  line.cpp  line.h  log.cpp  log.h  main.cpp  material.cpp  material.h  (+89 more)
ui/: main.cpp  test_main.cpp  ui.cpp  ui.h
vc/: AngryEngine.sln  AngryEngine.vcxproj  AngryEngine.vcxproj.filters
vkt02/: main.cpp  qeactivity.cpp  qeactivity.h  qeanimation.cpp  qeanimation.h  qeasset.cpp  qeasset.h  qeaxis.cpp  qeaxis.h  qebase.cpp  qebase.h  qebillboard.cpp  qebillboard.h  qecamera.cpp  qecamera.h  qecommand.cpp  qecommand.h  qecomponent.cpp  qecomponent.h  qecompute.cpp  qecompute.h  qecube.cpp  qecube.h  qecubemap.cpp  qecubemap.h  qeencode.cpp  qeencode.h  qeglobal.cpp  qeglobal.h  qegraphics.cpp  qegraphics.h  qegrid.cpp  qegrid.h  qeheader.h  qeinputcontrol.cpp  qeinputcontrol.h  qelight.cpp  qelight.h  qeline.cpp  qeline.h  (+40 more)
vkt02/x64/Debug/: qeencode.obj.enc  qegraphics.new.obj.enc  qegraphics.obj.enc  vc141.idb
vkt02/x64/Debug/vkt02.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vkt02.lastbuildstate
vs/: QueenEngine.sln  QueenEngine.vcxproj  QueenEngine.vcxproj.filters
x64/Debug/: vkt02.ilk
x64/Release/: vkt02.ipdb
x64Release/: vkt02.ipdb
